Adds Permissions Manager, enables use of Vault.
The RIPermissionsManager allows for simple implementation of various
permission back ends. Vault has now become a useable permissions
manager, but native PermissionsEx code remains.

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,7 @@
 name: RestockIt
 main: org.cp23.restockit.RestockIt
-version: 1.9.2
+version: 1.10-dualspiral1-SNAPSHOT
+softdepend: [Vault, PermissionsEx]
 commands:
 
 permissions:
